--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,12 @@
 <footer class="h-fit bg-white relative z-40 border border-t-redis-pen-300 text-redis-pen-600 flex justify-center font-mono text-[15px]">
   <div class="flex flex-col gap-8 lg:max-w-[1920px] grow">
     <div class="flex flex-col lg:flex-row px-4 pt-8 lg:p-11 justify-between gap-4">
-      <div class="flex flex-col justify-between grow-[2]">
+      <div class="flex flex-col gap-4">
         <a class="relative hover:text-redis-pen-400 w-[82px] mb-0" href="https://redis.io/">
           {{ partial "icons/logo-script.html" }}
+        </a>
+        <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+          <span class="">pad</span>
         </a>
          <div class="flex flex-col justify-between mt-0 lg:mt-0 lg:mr-8 gap-2">
         {{/*  <div class="flex flex-row gap-2 items-center"><span>Language</span><span>{{ partial "icons/caret.html" }}</span></div>  */}}
@@ -29,16 +32,31 @@
         </div>
       </div>
         <div class="hidden lg:flex flex-col gap-0 bg-neutral-150 lg:bg-white text-[13px]">
+          <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+            <span class="">pad</span>
+          </a>
           <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/legal/privacy-policy/">
             Privacy
           </a>
+          <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+            <span class="">pad</span>
+          </a>
           <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/legal/redis-website-terms-of-use/">
             Terms of use
+          </a>
+          <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+            <span class="">pad</span>
           </a>
         <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/legal/">
           Legal notices
         </a>
         </div>
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
       </div>
        <div class="flex flex-col gap-4">
       <h3 class="uppercase font-medium text-redis-pen-800 mb-2">Use cases</h3>
@@ -73,6 +91,18 @@
         <span class="">User profile storage</span>
       </a>
     </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
       <div class="flex flex-col gap-4">
       <h3 class="uppercase font-medium text-redis-pen-800 mb-2">Industries</h3>
       <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/industries/financial-services">
@@ -87,6 +117,12 @@
       <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/industries/retail">
         <span class="">Retail</span>
       </a>
+      <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+        <span class="">pad</span>
+      </a>
+      <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+        <span class="">pad</span>
+      </a>
       <h3 class="uppercase font-medium text-redis-pen-800 mb-2 mt-2 gap-4">Compare</h3>
         <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/cloud/compare-us-with-aws-elasticache/">
         <span class="">Redis vs Elasticache</span>
@@ -100,6 +136,18 @@
       <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/comparisons/oss-vs-enterprise/">
         <span class="">Redis vs Source Available</span>
       </a>
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
+    </div>
+    <div class="flex flex-col gap-4">
     </div>
       <div class="flex flex-col gap-4">
          <h3 class="uppercase font-medium text-redis-pen-800 mb-2">Company</h3>
@@ -118,16 +166,31 @@
       <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/partners">
         <span class="">Partners</span>
       </a>
+      <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+        <span class="">pad</span>
+      </a>
         <h3 class="uppercase font-medium text-redis-pen-800 mb-2 mt-2 gap-4">Connect</h3>
       <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/community">
         <span class="">Community</span>
       </a>
       <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/events">
-        <span class="">Events, tech talks & webinars</span>
+        <span class="">Events & Webinars</span>
       </a>
         <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/company/news">
         <span class="">News</span>
       </a>
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
+      </div>
+      <div class="flex flex-col gap-4">
       </div>
       <div class="flex flex-col gap-4">
         <h3 class="uppercase font-medium text-redis-pen-800 mb-2">Partners</h3>
@@ -140,9 +203,18 @@
         <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/cloud-partners/microsoft-azure/">
           Microsoft Azure
         </a>
-        <h3 class="uppercase font-medium text-redis-pen-800 mb-2">Support</h3>
+        <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+          <span class="">pad</span>
+        </a>
+        <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+          <span class="">pad</span>
+        </a>
+        <a class="flex flex-col hover:text-redis-red-500 tracking-tight" style="visibility: hidden;" href="">
+          <span class="">pad</span>
+        </a>
+        <h3 class="uppercase font-medium text-redis-pen-800 mb-2 mt-2 gap-4">Support</h3>
         <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/services/professional-services">
-        <span class="">Professional services</span>
+        <span class="">Professional Services</span>
       </a>
          <a class="flex flex-col hover:text-redis-red-500 tracking-tight" href="https://redis.io/support">
         <span class="">Support</span>
