--- a/layouts/partials/docs-section.html
+++ b/layouts/partials/docs-section.html
@@ -1,25 +1,27 @@
-<div class="w-full flex flex-col md:flex-row gap-11 md:gap-0">
-  <div class="flex flex-col gap-5 flex-1">
+<div class="w-full flex flex-col gap-5">
+  <div class="flex flex-row gap-5">
     <h3 class="text-2xl">{{ .Title }}</h3>
     <p>{{ .Description }}</p>
     {{ partial "components/button-link.html" (dict "Href" .ButtonLink "Text" .ButtonLabel) }}
   </div>
-  <div class="flex-1 font-mono">
-    <div class="h-full flex flex-col md:flex-row gap-11 md:gap-8">
-      <div class="flex flex-col gap-5 flex-1">
-        <p class="uppercase">{{ .LinksLeftTitle }}</p>
-        {{ range .LinksLeft }}
-          <a class="hover:text-redis-red-500 transition-colors text-balance" href="{{ .URL }}">{{ .Text }}&nbsp;→</a>
-        {{ end }}
-      </div>
-      {{ if .LinksRight }}
-      <div class="flex flex-col gap-5 flex-1">
-        <p class="uppercase">{{ .LinksRightTitle }}</p>
-        {{ range .LinksRight }}
-          <a class="hover:text-redis-red-500 transition-colors text-balance" href="{{ .URL }}">{{ .Text }}&nbsp;→</a>
-        {{ end }}
-      </div>
+  
+  <div class="font-mono">
+    <!-- First row of buttons -->
+    <div class="flex flex-row gap-5">
+      <p class="uppercase">{{ .LinksLeftTitle }}</p>
+      {{ range .LinksLeft }}
+        <a class="hover:text-redis-red-500 transition-colors text-balance" href="{{ .URL }}">{{ .Text }}&nbsp;→</a>
       {{ end }}
     </div>
+    
+    <!-- Second row of buttons (if LinksRight is available) -->
+    {{ if .LinksRight }}
+    <div class="flex flex-row gap-5 mt-4">
+      <p class="uppercase">{{ .LinksRightTitle }}</p>
+      {{ range .LinksRight }}
+        <a class="hover:text-redis-red-500 transition-colors text-balance" href="{{ .URL }}">{{ .Text }}&nbsp;→</a>
+      {{ end }}
+    </div>
+    {{ end }}
   </div>
 </div>
