--- a/layouts/partials/docs-section.html
+++ b/layouts/partials/docs-section.html
@@ -1,22 +1,22 @@
 <div class="w-full flex flex-col gap-5">
-  <div class="flex flex-row gap-5">
+  <div class="flex flex-row gap-5 border-t border-redis-pen-300 pt-5">
     <h3 class="text-2xl">{{ .Title }}</h3>
     <p>{{ .Description }}</p>
     {{ partial "components/button-link.html" (dict "Href" .ButtonLink "Text" .ButtonLabel) }}
   </div>
   
   <div class="font-mono">
-    <!-- First row of buttons -->
-    <div class="flex flex-row gap-5">
+    <!-- First row of buttons with horizontal line -->
+    <div class="flex flex-row gap-5 border-t border-redis-pen-300 pt-5">
       <p class="uppercase">{{ .LinksLeftTitle }}</p>
       {{ range .LinksLeft }}
         <a class="hover:text-redis-red-500 transition-colors text-balance" href="{{ .URL }}">{{ .Text }}&nbsp;→</a>
       {{ end }}
     </div>
     
-    <!-- Second row of buttons (if LinksRight is available) -->
+    <!-- Second row of buttons with horizontal line (if LinksRight is available) -->
     {{ if .LinksRight }}
-    <div class="flex flex-row gap-5 mt-4">
+    <div class="flex flex-row gap-5 border-t border-redis-pen-300 pt-5">
       <p class="uppercase">{{ .LinksRightTitle }}</p>
       {{ range .LinksRight }}
         <a class="hover:text-redis-red-500 transition-colors text-balance" href="{{ .URL }}">{{ .Text }}&nbsp;→</a>
