--- a/layouts/home.html
+++ b/layouts/home.html
@@ -102,23 +102,23 @@ tor{{ define "head" }}
           "Title" "Caching"
           "Description" "Cache user sessions"
           "ButtonLink" "./operate/get-started/use-cases/caching"
-          "ButtonLabel" "Caching quick start" 
+          "ButtonLabel" "Caching quick start guide" 
 	    )  }}
         {{ partial "docs-section.html" (dict
-	       "Title" "Leaderboards and rate limiting"
-          "Description" "Create leaderboards or rate limiting with sorted sets"
+	       "Title" "Rate limiting"
+          "Description" "Work with sorted sets"
           "ButtonLink" "./develop/data-types/sorted-sets/"
-             "ButtonLabel" "Sorted sets ordered by a score with example code" 
+             "ButtonLabel" "Sorted sets ordered by a score" 
         ) }}
         {{ partial "docs-section.html" (dict
-	       "Title" "AI and machine learning"
+	       "Title" "Machine learning"
           "Description" "Fast and scalable data retrieval for AI projects"
           "ButtonLink" "./develop/get-started/redis-in-ai/"
              "ButtonLabel" "AI agents, chatbots, and apps" 
         ) }}
         {{ partial "docs-section.html" (dict
-	       "Title" "Query data and perform a vector search"
-          "Description" "Transform unstructured data into vectors that ML models can process"
+	       "Title" "Vector queries"
+          "Description" "Use vectors that ML models can process"
            "ButtonLink" "./develop/get-started/vector-database/"
              "ButtonLabel" "Vector database quick start guide" 
         ) }}
