--- a/layouts/home.html
+++ b/layouts/home.html
@@ -76,25 +76,25 @@
           "Title" "Get Started"
           "Description" "Installation & setup for new users"
 	  "ButtonLink" "./operate/get-started/quick-start-install"
-          "ButtonLabel" "Quick start guide"  
+          "ButtonLabel" "Quick start install guide"  
          ) }}
         {{ partial "docs-section.html" (dict
 	     "Title" "Clustering"
           "Description" "Basic Redis software cluster"
           "ButtonLink" "./operate/get-started/quick-start-install"
-             "ButtonLabel" "Single-node cluster install" 
+             "ButtonLabel" "Single-node install guide" 
         ) }}
         {{ partial "docs-section.html" (dict
 	     "Title" "Active-Active"
           "Description" "Cloud deployment"
            "ButtonLink" "./operate/rc/databases/create-database/create-active-active-database/"
-             "ButtonLabel" "Deploy Active-Active databases in Redis Cloud" 
+             "ButtonLabel" "Database deployment guide" 
         ) }}
         {{ partial "docs-section.html" (dict
 	     "Title" "Kubernetes"
           "Description" "Container deployment"
             "ButtonLink" "./operate/kubernetes/deployment/quick-start/"
-             "ButtonLabel" "Kubernetes deployment"
+             "ButtonLabel" "Kubernetes deployment guide"
         ) }}
       </div>
       <div class="lg:px-11 w-full flex flex-col gap-3">
@@ -108,13 +108,13 @@
 	       "Title" "Rate limiting"
           "Description" "Work with sorted sets"
           "ButtonLink" "./develop/data-types/sorted-sets/"
-             "ButtonLabel" "Sorted sets ordered by a score" 
+             "ButtonLabel" "Sorted sets code examples" 
         ) }}
         {{ partial "docs-section.html" (dict
 	       "Title" "Machine learning"
-          "Description" "Fast and scalable data retrieval for AI projects"
+          "Description" "Fast and scalable data retrieval for AI"
           "ButtonLink" "./develop/get-started/redis-in-ai/"
-             "ButtonLabel" "AI agents, chatbots, and apps" 
+             "ButtonLabel" "AI agents, chatbots & apps" 
         ) }}
         {{ partial "docs-section.html" (dict
 	       "Title" "Vector queries"
