--- a/layouts/home.html
+++ b/layouts/home.html
@@ -114,13 +114,13 @@
 	       "Title" "Machine learning"
           "Description" "Fast and scalable data retrieval for AI"
           "ButtonLink" "./develop/get-started/redis-in-ai/"
-             "ButtonLabel" "AI agents, chatbots & apps" 
+             "ButtonLabel" "agents, chatbots & apps" 
         ) }}
         {{ partial "docs-section.html" (dict
 	       "Title" "Vector queries"
           "Description" "Use vectors that ML models can process"
            "ButtonLink" "./develop/get-started/vector-database/"
-             "ButtonLabel" "Vector database quick start guide" 
+             "ButtonLabel" "Vector quick start guide" 
         ) }}
       </div>
     </div>
