--- a/layouts/home.html
+++ b/layouts/home.html
@@ -114,7 +114,7 @@
 	       "Title" "Machine learning"
           "Description" "Fast and scalable data retrieval for AI"
           "ButtonLink" "./develop/get-started/redis-in-ai/"
-             "ButtonLabel" "agents & chatbots" 
+             "ButtonLabel" "Agents & chatbots" 
         ) }}
         {{ partial "docs-section.html" (dict
 	       "Title" "Vector queries"
